# fwupd

./: meson.build
.github/workflows/: matrix.yml
contrib/: build-venv.sh  launch-venv.sh
contrib/ci/: build_freebsd_package.sh  dependencies.xml
libfwupdplugin/: fu-freebsd-efivars.c  fu-hidraw-device.c  fu-hwids-kenv.c  fu-usb-bos-descriptor-private.h  fu-usb-bos-descriptor.c  fu-usb-device.c
plugins/: meson.build
plugins/framework-qmk/: fu-framework-qmk-device.c
plugins/framework16-keyboard/: README.md  framework16-keyboard.quirk  fu-framework16-keyboard-device.c  fu-framework16-keyboard-device.h  fu-framework16-keyboard-plugin.c  fu-framework16-keyboard-plugin.h  fu-framework16-keyboard.rs  meson.build
plugins/ilitek-touch/: README.md  fu-ilitek-touch-device.c  fu-ilitek-touch-device.h  fu-ilitek-touch-plugin.c  fu-ilitek-touch-plugin.h  fu-ilitek-touch.rs  ilitek-touch.quirk  meson.build
plugins/parade-lspcon/: fu-parade-lspcon-device.c  fu-parade-lspcon.rs
plugins/pixart-tp/: fu-pixart-tp-device.c  fu-pixart-tp.rs  pixart-tp.quirk
plugins/uefi-capsule/: fu-uefi-capsule-backend-freebsd.c  uefi-capsule.quirk
src/: fu-engine.c  fu-hidraw-backend.c  fu-hidraw-backend.h  fu-tool.c  fu-usb-backend.c  fu-util-common.c  fu-util-common.h  fu-util.c  meson.build
